# diethers-hand-system

./: .gitignore  main.py  pyproject.toml  testing.ipynb
core/: config.py
src/model/db/: table.py
src/model/schema/: table_schema.py
src/service/etl/: crsp_flows.py  crsp_service.py
