[project]
name = "diethers-hand-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.43.2",
    "dataframely>=2.6.0",
    "ipykernel>=7.1.0",
    "polars>=1.37.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
]
